# vague

./: CONTRIBUTING.md  Cargo.toml  README.md  vague_index.json
src/: clip.rs  embedder.rs  extract.rs  indexer.rs  main.rs  ocr.rs  store.rs
testdata/: IMPORTANT_REMINDER.txt  cat.txt  dog.txt  late_night_thoughts.txt  pancakes.txt  project_ideas.txt  recipe.txt  rust_notes.txt  shopping_list.txt  taxes.txt
