[package]
name = "vague"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
fastembed = "5"
rayon = "1.10"
indicatif = "0.18.6"
colored = "3.1.1"
