[package]
name = "vague"
version = "0.1.1"
edition = "2024"

[dependencies]
serde_json = "1"
anyhow = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
fastembed = "5"
rayon = "1.12"
indicatif = "0.18.6"
colored = "3.1.1"
dirs = "6.0.0"
pdf_oxide = "0.3"
ocrs = "0.12.2"
rten = "0.24.0"
image = "0.25"
